# langgraph-cli-chat-agent

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
config/: __init__.py  constants.py  enums.py  prompts.py  settings.py
core/: __init__.py  bootstrap.py
core/agent/: __init__.py  chat_agent.py  planner.py  tool_agent.py
core/database/: db.py
core/graph/: __init__.py  builder.py  checkpointer.py  graph.py  nodes.py  router.py  state.py  workflow.py
core/llm/: __init__.py  formatter.py  manager.py  models.py  streaming.py  tokenizer.py
core/memory/: checkpoint.py  history.py  session.py  summarizer.py
core/tools/: __init__.py  calculator.py  news.py  preferences.py  registry.py  search.py  weather.py
docs/: 05_Project_Roadmap(1).md  05_Project_Roadmap_Blueprint.md  17_07.md  AI_Agent_Learning_Roadmap.md  AI_Engineering_Learning_Roadmap.md  Phase_12_RAG_Retrieval_Roadmap.md  Phase_13_Advanced_RAG_Roadmap.md  Phase_14_Advanced_LangGraph_Roadmap.md  Phase_15_LangChain_Deep_Dive_Roadmap.md  Phase_16_Multi_Agent_Systems_Roadmap.md  Phase_17_Production_AI_Engineering_Roadmap.md  Phase_18_MCP_Roadmap.md  RAG.md  implementation_summary.md  mvpRAG.md  path.md  phase1.md
interfaces/: __init__.py
interfaces/api/: README.md
knowledge/: __init__.py
services/: chat_service.py  memory_service.py  rag_service.py  session_service.py  tool_service.py
shared/: __init__.py  decorators.py  exceptions.py  helpers.py  logger.py
storage/: __init__.py  postgres.py  schema.py  sqlite.py
tests/: README.md  test_llm.py
(+32 files in other folders)
